// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppSearchFilters should match a snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <div
        class="el-flex-column el-flex-container"
      >
        <p
          class="apps-filters-mobile-browse-by apps-search-mobile-controls el-has-no-margin el-small-text"
        >
          Browse By
        </p>
      </div>
      <div
        class="el-flex-justify-between el-flex-container"
      >
        <p
          class="apps-search-desktop-controls el-has-bold-text el-body-text"
        >
          Browse By
        </p>
      </div>
      <div
        class="el-fade-in apps-filters-categories el-multi-select-un-selected"
      >
        <input
          class="el-multi-select-checkbox"
          id="9"
          name="Tools"
          type="checkbox"
          value="9"
        />
        <label
          class="el-has-grey-chips el-multi-select-label"
          for="9"
        >
          Tools
        </label>
        <input
          class="el-multi-select-checkbox"
          id="8"
          name="Social"
          type="checkbox"
          value="8"
        />
        <label
          class="el-has-grey-chips el-multi-select-label"
          for="8"
        >
          Social
        </label>
        <input
          class="el-multi-select-checkbox"
          id="7"
          name="Marketing"
          type="checkbox"
          value="7"
        />
        <label
          class="el-has-grey-chips el-multi-select-label"
          for="7"
        >
          Marketing
        </label>
        <input
          class="el-multi-select-checkbox"
          id="6"
          name="Communication"
          type="checkbox"
          value="6"
        />
        <label
          class="el-has-grey-chips el-multi-select-label"
          for="6"
        >
          Communication
        </label>
        <input
          class="el-multi-select-checkbox"
          id="5"
          name="Media"
          type="checkbox"
          value="5"
        />
        <label
          class="el-has-grey-chips el-multi-select-label"
          for="5"
        >
          Media
        </label>
        <input
          class="el-multi-select-checkbox"
          id="4"
          name="Events"
          type="checkbox"
          value="4"
        />
        <label
          class="el-has-grey-chips el-multi-select-label"
          for="4"
        >
          Events
        </label>
        <input
          class="el-multi-select-checkbox"
          id="3"
          name="Finance"
          type="checkbox"
          value="3"
        />
        <label
          class="el-has-grey-chips el-multi-select-label"
          for="3"
        >
          Finance
        </label>
        <input
          class="el-multi-select-checkbox"
          id="2"
          name="Productivity"
          type="checkbox"
          value="2"
        />
        <label
          class="el-has-grey-chips el-multi-select-label"
          for="2"
        >
          Productivity
        </label>
        <input
          class="el-multi-select-checkbox"
          id="1"
          name="Other"
          type="checkbox"
          value="1"
        />
        <label
          class="el-has-grey-chips el-multi-select-label"
          for="1"
        >
          Other
        </label>
      </div>
      <div
        class="apps-search-desktop-controls el-flex-container"
      >
        <div
          class="el-flex-align-center apps-search-container el-mr5 el-flex-container"
        >
          <span
            class="apps-search-input-icon el-icon"
            style="font-size: 1.25rem;"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g>
                <path
                  d="M19.7556 18.5783L14.0682 12.8909C15.1699 11.5301 15.8332 9.80089 15.8332 7.91758C15.8332 3.55262 12.2815 0.000976562 7.91656 0.000976562C3.55161 0.000976562 0 3.55258 0 7.91754C0 12.2825 3.55165 15.8342 7.9166 15.8342C9.7999 15.8342 11.5291 15.1708 12.8899 14.0692L18.5773 19.7566C18.7398 19.9191 18.9531 20.0008 19.1665 20.0008C19.3798 20.0008 19.5932 19.9191 19.7557 19.7566C20.0815 19.4308 20.0815 18.9041 19.7556 18.5783ZM7.9166 14.1675C4.46996 14.1675 1.66666 11.3642 1.66666 7.91754C1.66666 4.4709 4.46996 1.6676 7.9166 1.6676C11.3632 1.6676 14.1665 4.4709 14.1665 7.91754C14.1665 11.3642 11.3632 14.1675 7.9166 14.1675Z"
                  fill="currentColor"
                />
              </g>
              <defs>
                <clippath
                  id="clip0"
                >
                  <rect
                    fill="white"
                    height="20.0003"
                    width="20"
                  />
                </clippath>
              </defs>
            </svg>
          </span>
          <input
            class="apps-search-input"
            placeholder="Search by App or Developer"
            type="text"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <div
      class="el-flex-column el-flex-container"
    >
      <p
        class="apps-filters-mobile-browse-by apps-search-mobile-controls el-has-no-margin el-small-text"
      >
        Browse By
      </p>
    </div>
    <div
      class="el-flex-justify-between el-flex-container"
    >
      <p
        class="apps-search-desktop-controls el-has-bold-text el-body-text"
      >
        Browse By
      </p>
    </div>
    <div
      class="el-fade-in apps-filters-categories el-multi-select-un-selected"
    >
      <input
        class="el-multi-select-checkbox"
        id="9"
        name="Tools"
        type="checkbox"
        value="9"
      />
      <label
        class="el-has-grey-chips el-multi-select-label"
        for="9"
      >
        Tools
      </label>
      <input
        class="el-multi-select-checkbox"
        id="8"
        name="Social"
        type="checkbox"
        value="8"
      />
      <label
        class="el-has-grey-chips el-multi-select-label"
        for="8"
      >
        Social
      </label>
      <input
        class="el-multi-select-checkbox"
        id="7"
        name="Marketing"
        type="checkbox"
        value="7"
      />
      <label
        class="el-has-grey-chips el-multi-select-label"
        for="7"
      >
        Marketing
      </label>
      <input
        class="el-multi-select-checkbox"
        id="6"
        name="Communication"
        type="checkbox"
        value="6"
      />
      <label
        class="el-has-grey-chips el-multi-select-label"
        for="6"
      >
        Communication
      </label>
      <input
        class="el-multi-select-checkbox"
        id="5"
        name="Media"
        type="checkbox"
        value="5"
      />
      <label
        class="el-has-grey-chips el-multi-select-label"
        for="5"
      >
        Media
      </label>
      <input
        class="el-multi-select-checkbox"
        id="4"
        name="Events"
        type="checkbox"
        value="4"
      />
      <label
        class="el-has-grey-chips el-multi-select-label"
        for="4"
      >
        Events
      </label>
      <input
        class="el-multi-select-checkbox"
        id="3"
        name="Finance"
        type="checkbox"
        value="3"
      />
      <label
        class="el-has-grey-chips el-multi-select-label"
        for="3"
      >
        Finance
      </label>
      <input
        class="el-multi-select-checkbox"
        id="2"
        name="Productivity"
        type="checkbox"
        value="2"
      />
      <label
        class="el-has-grey-chips el-multi-select-label"
        for="2"
      >
        Productivity
      </label>
      <input
        class="el-multi-select-checkbox"
        id="1"
        name="Other"
        type="checkbox"
        value="1"
      />
      <label
        class="el-has-grey-chips el-multi-select-label"
        for="1"
      >
        Other
      </label>
    </div>
    <div
      class="apps-search-desktop-controls el-flex-container"
    >
      <div
        class="el-flex-align-center apps-search-container el-mr5 el-flex-container"
      >
        <span
          class="apps-search-input-icon el-icon"
          style="font-size: 1.25rem;"
        >
          <svg
            fill="none"
            height="1em"
            viewBox="0 0 20 20"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g>
              <path
                d="M19.7556 18.5783L14.0682 12.8909C15.1699 11.5301 15.8332 9.80089 15.8332 7.91758C15.8332 3.55262 12.2815 0.000976562 7.91656 0.000976562C3.55161 0.000976562 0 3.55258 0 7.91754C0 12.2825 3.55165 15.8342 7.9166 15.8342C9.7999 15.8342 11.5291 15.1708 12.8899 14.0692L18.5773 19.7566C18.7398 19.9191 18.9531 20.0008 19.1665 20.0008C19.3798 20.0008 19.5932 19.9191 19.7557 19.7566C20.0815 19.4308 20.0815 18.9041 19.7556 18.5783ZM7.9166 14.1675C4.46996 14.1675 1.66666 11.3642 1.66666 7.91754C1.66666 4.4709 4.46996 1.6676 7.9166 1.6676C11.3632 1.6676 14.1665 4.4709 14.1665 7.91754C14.1665 11.3642 11.3632 14.1675 7.9166 14.1675Z"
                fill="currentColor"
              />
            </g>
            <defs>
              <clippath
                id="clip0"
              >
                <rect
                  fill="white"
                  height="20.0003"
                  width="20"
                />
              </clippath>
            </defs>
          </svg>
        </span>
        <input
          class="apps-search-input"
          placeholder="Search by App or Developer"
          type="text"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppSearchFilters should match a snapshot where has search 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <div
        class="el-flex-column el-flex-container"
      >
        <div
          class="apps-search-mobile-filter-controls-active apps-search-mobile-filter-controls"
        >
          <div
            class="el-flex-align-center apps-search-container el-flex-container"
          >
            <span
              class="apps-search-input-icon el-icon"
              style="font-size: 1.25rem;"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M19.7556 18.5783L14.0682 12.8909C15.1699 11.5301 15.8332 9.80089 15.8332 7.91758C15.8332 3.55262 12.2815 0.000976562 7.91656 0.000976562C3.55161 0.000976562 0 3.55258 0 7.91754C0 12.2825 3.55165 15.8342 7.9166 15.8342C9.7999 15.8342 11.5291 15.1708 12.8899 14.0692L18.5773 19.7566C18.7398 19.9191 18.9531 20.0008 19.1665 20.0008C19.3798 20.0008 19.5932 19.9191 19.7557 19.7566C20.0815 19.4308 20.0815 18.9041 19.7556 18.5783ZM7.9166 14.1675C4.46996 14.1675 1.66666 11.3642 1.66666 7.91754C1.66666 4.4709 4.46996 1.6676 7.9166 1.6676C11.3632 1.6676 14.1665 4.4709 14.1665 7.91754C14.1665 11.3642 11.3632 14.1675 7.9166 14.1675Z"
                    fill="currentColor"
                  />
                </g>
                <defs>
                  <clippath
                    id="clip0"
                  >
                    <rect
                      fill="white"
                      height="20.0003"
                      width="20"
                    />
                  </clippath>
                </defs>
              </svg>
            </span>
            <input
              class="apps-search-input"
              placeholder="Search by App or Developer"
              type="text"
            />
          </div>
        </div>
      </div>
      <div
        class="el-flex-justify-between el-flex-container"
      >
        <p
          class="apps-search-desktop-controls el-has-bold-text el-body-text"
        >
          Browse By
        </p>
      </div>
      <div
        class="el-fade-in apps-filters-categories apps-search-desktop-controls el-multi-select-un-selected"
      >
        <input
          class="el-multi-select-checkbox"
          id="9"
          name="Tools"
          type="checkbox"
          value="9"
        />
        <label
          class="el-has-grey-chips el-multi-select-label"
          for="9"
        >
          Tools
        </label>
        <input
          class="el-multi-select-checkbox"
          id="8"
          name="Social"
          type="checkbox"
          value="8"
        />
        <label
          class="el-has-grey-chips el-multi-select-label"
          for="8"
        >
          Social
        </label>
        <input
          class="el-multi-select-checkbox"
          id="7"
          name="Marketing"
          type="checkbox"
          value="7"
        />
        <label
          class="el-has-grey-chips el-multi-select-label"
          for="7"
        >
          Marketing
        </label>
        <input
          class="el-multi-select-checkbox"
          id="6"
          name="Communication"
          type="checkbox"
          value="6"
        />
        <label
          class="el-has-grey-chips el-multi-select-label"
          for="6"
        >
          Communication
        </label>
        <input
          class="el-multi-select-checkbox"
          id="5"
          name="Media"
          type="checkbox"
          value="5"
        />
        <label
          class="el-has-grey-chips el-multi-select-label"
          for="5"
        >
          Media
        </label>
        <input
          class="el-multi-select-checkbox"
          id="4"
          name="Events"
          type="checkbox"
          value="4"
        />
        <label
          class="el-has-grey-chips el-multi-select-label"
          for="4"
        >
          Events
        </label>
        <input
          class="el-multi-select-checkbox"
          id="3"
          name="Finance"
          type="checkbox"
          value="3"
        />
        <label
          class="el-has-grey-chips el-multi-select-label"
          for="3"
        >
          Finance
        </label>
        <input
          class="el-multi-select-checkbox"
          id="2"
          name="Productivity"
          type="checkbox"
          value="2"
        />
        <label
          class="el-has-grey-chips el-multi-select-label"
          for="2"
        >
          Productivity
        </label>
        <input
          class="el-multi-select-checkbox"
          id="1"
          name="Other"
          type="checkbox"
          value="1"
        />
        <label
          class="el-has-grey-chips el-multi-select-label"
          for="1"
        >
          Other
        </label>
      </div>
      <div
        class="apps-search-mobile-controls el-mb5 el-button-group"
      >
        <div
          class="el-button-group-inner"
        >
          <button
            class="el-intent-low el-button"
          >
            Clear Search Filters
          </button>
        </div>
      </div>
      <div
        class="apps-search-desktop-controls el-flex-container"
      >
        <div
          class="el-flex-align-center apps-search-container el-mr5 el-flex-container"
        >
          <span
            class="apps-search-input-icon el-icon"
            style="font-size: 1.25rem;"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g>
                <path
                  d="M19.7556 18.5783L14.0682 12.8909C15.1699 11.5301 15.8332 9.80089 15.8332 7.91758C15.8332 3.55262 12.2815 0.000976562 7.91656 0.000976562C3.55161 0.000976562 0 3.55258 0 7.91754C0 12.2825 3.55165 15.8342 7.9166 15.8342C9.7999 15.8342 11.5291 15.1708 12.8899 14.0692L18.5773 19.7566C18.7398 19.9191 18.9531 20.0008 19.1665 20.0008C19.3798 20.0008 19.5932 19.9191 19.7557 19.7566C20.0815 19.4308 20.0815 18.9041 19.7556 18.5783ZM7.9166 14.1675C4.46996 14.1675 1.66666 11.3642 1.66666 7.91754C1.66666 4.4709 4.46996 1.6676 7.9166 1.6676C11.3632 1.6676 14.1665 4.4709 14.1665 7.91754C14.1665 11.3642 11.3632 14.1675 7.9166 14.1675Z"
                  fill="currentColor"
                />
              </g>
              <defs>
                <clippath
                  id="clip0"
                >
                  <rect
                    fill="white"
                    height="20.0003"
                    width="20"
                  />
                </clippath>
              </defs>
            </svg>
          </span>
          <input
            class="apps-search-input"
            placeholder="Search by App or Developer"
            type="text"
          />
        </div>
        <button
          class="el-intent-low el-button"
        >
          Clear Search Filters
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <div
      class="el-flex-column el-flex-container"
    >
      <div
        class="apps-search-mobile-filter-controls-active apps-search-mobile-filter-controls"
      >
        <div
          class="el-flex-align-center apps-search-container el-flex-container"
        >
          <span
            class="apps-search-input-icon el-icon"
            style="font-size: 1.25rem;"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g>
                <path
                  d="M19.7556 18.5783L14.0682 12.8909C15.1699 11.5301 15.8332 9.80089 15.8332 7.91758C15.8332 3.55262 12.2815 0.000976562 7.91656 0.000976562C3.55161 0.000976562 0 3.55258 0 7.91754C0 12.2825 3.55165 15.8342 7.9166 15.8342C9.7999 15.8342 11.5291 15.1708 12.8899 14.0692L18.5773 19.7566C18.7398 19.9191 18.9531 20.0008 19.1665 20.0008C19.3798 20.0008 19.5932 19.9191 19.7557 19.7566C20.0815 19.4308 20.0815 18.9041 19.7556 18.5783ZM7.9166 14.1675C4.46996 14.1675 1.66666 11.3642 1.66666 7.91754C1.66666 4.4709 4.46996 1.6676 7.9166 1.6676C11.3632 1.6676 14.1665 4.4709 14.1665 7.91754C14.1665 11.3642 11.3632 14.1675 7.9166 14.1675Z"
                  fill="currentColor"
                />
              </g>
              <defs>
                <clippath
                  id="clip0"
                >
                  <rect
                    fill="white"
                    height="20.0003"
                    width="20"
                  />
                </clippath>
              </defs>
            </svg>
          </span>
          <input
            class="apps-search-input"
            placeholder="Search by App or Developer"
            type="text"
          />
        </div>
      </div>
    </div>
    <div
      class="el-flex-justify-between el-flex-container"
    >
      <p
        class="apps-search-desktop-controls el-has-bold-text el-body-text"
      >
        Browse By
      </p>
    </div>
    <div
      class="el-fade-in apps-filters-categories apps-search-desktop-controls el-multi-select-un-selected"
    >
      <input
        class="el-multi-select-checkbox"
        id="9"
        name="Tools"
        type="checkbox"
        value="9"
      />
      <label
        class="el-has-grey-chips el-multi-select-label"
        for="9"
      >
        Tools
      </label>
      <input
        class="el-multi-select-checkbox"
        id="8"
        name="Social"
        type="checkbox"
        value="8"
      />
      <label
        class="el-has-grey-chips el-multi-select-label"
        for="8"
      >
        Social
      </label>
      <input
        class="el-multi-select-checkbox"
        id="7"
        name="Marketing"
        type="checkbox"
        value="7"
      />
      <label
        class="el-has-grey-chips el-multi-select-label"
        for="7"
      >
        Marketing
      </label>
      <input
        class="el-multi-select-checkbox"
        id="6"
        name="Communication"
        type="checkbox"
        value="6"
      />
      <label
        class="el-has-grey-chips el-multi-select-label"
        for="6"
      >
        Communication
      </label>
      <input
        class="el-multi-select-checkbox"
        id="5"
        name="Media"
        type="checkbox"
        value="5"
      />
      <label
        class="el-has-grey-chips el-multi-select-label"
        for="5"
      >
        Media
      </label>
      <input
        class="el-multi-select-checkbox"
        id="4"
        name="Events"
        type="checkbox"
        value="4"
      />
      <label
        class="el-has-grey-chips el-multi-select-label"
        for="4"
      >
        Events
      </label>
      <input
        class="el-multi-select-checkbox"
        id="3"
        name="Finance"
        type="checkbox"
        value="3"
      />
      <label
        class="el-has-grey-chips el-multi-select-label"
        for="3"
      >
        Finance
      </label>
      <input
        class="el-multi-select-checkbox"
        id="2"
        name="Productivity"
        type="checkbox"
        value="2"
      />
      <label
        class="el-has-grey-chips el-multi-select-label"
        for="2"
      >
        Productivity
      </label>
      <input
        class="el-multi-select-checkbox"
        id="1"
        name="Other"
        type="checkbox"
        value="1"
      />
      <label
        class="el-has-grey-chips el-multi-select-label"
        for="1"
      >
        Other
      </label>
    </div>
    <div
      class="apps-search-mobile-controls el-mb5 el-button-group"
    >
      <div
        class="el-button-group-inner"
      >
        <button
          class="el-intent-low el-button"
        >
          Clear Search Filters
        </button>
      </div>
    </div>
    <div
      class="apps-search-desktop-controls el-flex-container"
    >
      <div
        class="el-flex-align-center apps-search-container el-mr5 el-flex-container"
      >
        <span
          class="apps-search-input-icon el-icon"
          style="font-size: 1.25rem;"
        >
          <svg
            fill="none"
            height="1em"
            viewBox="0 0 20 20"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g>
              <path
                d="M19.7556 18.5783L14.0682 12.8909C15.1699 11.5301 15.8332 9.80089 15.8332 7.91758C15.8332 3.55262 12.2815 0.000976562 7.91656 0.000976562C3.55161 0.000976562 0 3.55258 0 7.91754C0 12.2825 3.55165 15.8342 7.9166 15.8342C9.7999 15.8342 11.5291 15.1708 12.8899 14.0692L18.5773 19.7566C18.7398 19.9191 18.9531 20.0008 19.1665 20.0008C19.3798 20.0008 19.5932 19.9191 19.7557 19.7566C20.0815 19.4308 20.0815 18.9041 19.7556 18.5783ZM7.9166 14.1675C4.46996 14.1675 1.66666 11.3642 1.66666 7.91754C1.66666 4.4709 4.46996 1.6676 7.9166 1.6676C11.3632 1.6676 14.1665 4.4709 14.1665 7.91754C14.1665 11.3642 11.3632 14.1675 7.9166 14.1675Z"
                fill="currentColor"
              />
            </g>
            <defs>
              <clippath
                id="clip0"
              >
                <rect
                  fill="white"
                  height="20.0003"
                  width="20"
                />
              </clippath>
            </defs>
          </svg>
        </span>
        <input
          class="apps-search-input"
          placeholder="Search by App or Developer"
          type="text"
        />
      </div>
      <button
        class="el-intent-low el-button"
      >
        Clear Search Filters
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
